# FGOS-Net

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
configs/: fgos_current_best.yaml  fgos_eccv2026_paper.yaml
docs/: DATASETS.md  METHOD_CODE_MAP.md  MODEL_ZOO.md  PAPER_CODE_ALIGNMENT.md  REPRODUCE_TABLES.md
fgos/: __init__.py
fgos/models/: __init__.py  asgp.py  blocks.py  fgosnet.py  lgb.py  scan.py  wavelet.py
results/paper_reported/: table1_main_results.csv  table2_efficiency.csv  table3_ablation.csv  table4_cross_domain.csv
